--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ html {
   justify-content: center;
   align-items: center;
 }
-.task-history {
+.task-emoji {
   position: absolute;
   left: 10px;
 }
